so called fixed version

--- a/home2/makefile
+++ b/home2/makefile
@@ -1,6 +1,7 @@
 
 flight: FlightReservation.o Flight.o Passenger.o Person.o Preference.o
 	g++ main.cpp FlightReservation.o Flight.o Passenger.o Person.o Preference.o -o flight
+	make clean
 
 FlightReservation.o:
 	g++ -c FlightReservation.cpp
